change base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL       = "http://aubeaujeu.com/"
+baseURL       = "http://aubeaujeu.com/WIP/"
 languageCode  = "fr-FR"
 title         = "Au Beau Jeu | Boutique & bar à jeux, Lille"
 theme         = "roxo"
