--- a/data/clients.yml
+++ b/data/clients.yml
@@ -1,4 +1,15 @@
 enable        : true
-title         : "Who trust our judgment"
-client_logos  : 
-  ["images/clients/client-logo-one.png", "images/clients/client-logo-two.png", "images/clients/client-logo-three.png", "images/clients/client-logo-four.png", "images/clients/client-logo-five.png", "images/clients/client-logo-six.png", "images/clients/client-logo-seven.png", "images/clients/client-logo-eight.png", "images/clients/client-logo-nine.png", "images/clients/client-logo-ten.png"]
+title         : "Retrouvez-les chez nous"
+client_logos  :
+  [
+  "images/editeurs/iello.jpg",
+  "images/editeurs/spacecowboys.jpg",
+  "images/editeurs/libellud.png",
+  "images/editeurs/asmodee.png",
+  "images/editeurs/blackrock.png",
+  "images/editeurs/abysse.png",
+  "images/editeurs/filosofia.jpg",
+  "images/editeurs/lbdj.png",
+  "images/editeurs/matagot.png",
+  "images/editeurs/gigamic.png"
+  ]
