--- a/data/testimonial.yml
+++ b/data/testimonial.yml
@@ -3,10 +3,10 @@ title   : "Les avis de nos joueurs"
 subtitle: "Qu'ont-ils pensé de notre première rencontre ?"
 testimonial_item :
   - thumb : "images/testimonial/user-thumb-one.jpg"
-    name  : "Tchofri"
-    company_position: "Codename lover"
+    name  : "Sabine"
+    company_position: "Panini lover"
     quote : >
-            "Superbe découverte. Très bon accueil par des vendeurs qui connaissent leur sujet. Un concept boutique/ bar très intéressant. De bons conseils pour les jeux. Carte de menu petite mais amplement suffisante pour accompagner les bières et le code name."
+            "Incontournable pour une soirée entre amis un peu différente du "bar /resto". On vous explique les jeux donc même pas besoin de lire les notices. On ne voit effectivement pas le temps passer! Nous y sommes restés 4 heures, on a pu jouer à 7 jeux tranquillement. Il y des boissons et des croques Monsieur et panini délicieux. Aussi, si vous avez aimé les jeux, possibilité de les acheter sur place !!"
 
   - thumb : "images/testimonial/user-thumb-two.jpg"
     name  : "Simon Roussel"
@@ -19,21 +19,3 @@ testimonial_item :
     company_position: "Fantasy addict"
     quote : >
             "TROP BIEN !!! La vitrine peut prêter à confusion quand on y vois marqué bar à jeux, pourtant (tel le monde de Narnia) apparaît au bout d'un couloir, deux étages de tablées, et un mur tapissé d'étagère pleines de jeux de société ! (...) On a passé un moment fort plaisant !"
-
-  - thumb : "images/testimonial/user-thumb-four.jpg"
-    name  : "Dockrel Kahn"
-    company_position: "PM, Walmet"
-    quote : >
-            "Trust us we looked for a very long time and wasted thousands of dollars testing other teams, freelancers, and outsource companies."
-
-  - thumb : "images/testimonial/user-thumb-five.jpg"
-    name  : "Orino Monteno"
-    company_position: "CEO, Axion"
-    quote : >
-            "Roxo products have allowed us to deliver better support to all our clients. The agility with which we can implement new features and workflows is a key element."
-
-  - thumb : "images/testimonial/user-thumb-six.jpg"
-    name  : "Welfo Roy"
-    company_position: "PDO, Komoyo"
-    quote : >
-            "We’re a really busy restaurant, and roxo gives our customers a easy way to order, pay, and pick up their food so they can beat the line and beat that lunch rush."
