--- a/data/team.yml
+++ b/data/team.yml
@@ -18,3 +18,4 @@ members  :
     designation : Chef cuistot du bar à jeux, ses paninis sont aujourd'hui légendaires. Passionné par tous les TCGs de la planète, il l'est encore plus pour ses clients adorés.
     instagram   : https://www.instagram.com/guillouuu/?hl=fr
     facebook    : https://www.facebook.com/guillaume.desmartin.35
+    twitch      : https://www.twitch.tv/poscaa
