--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ enableEmoji=true
   # We're using formspree.io for form handling, paste your formspree url below
   formspreeFormUrl  = "https://formspree.io/xeqpjwdn"
 
-  custom_css = ["css/main.css"]
+  custom_css = ["css/style.min.css", "css/main.css"]
   custom_js = ["js/jquery.js"]
 
   # Navbar Action Button
