--- a/data/team.yml
+++ b/data/team.yml
@@ -14,8 +14,7 @@ members  :
     facebook    : https://www.facebook.com/steeves.avisse
 
   - image       : images/team/team-member-three.jpg
-    name        : Guillaume Desmartin
-    designation : Chef cuistot du bar à jeux, ses paninis sont aujourd'hui légendaires. Passionné par tous les TCGs de la planète, il l'est encore plus pour ses clients adorés.
-    instagram   : https://www.instagram.com/guillouuu/?hl=fr
-    facebook    : https://www.facebook.com/guillaume.desmartin.35
-    twitch      : https://www.twitch.tv/poscaa
+    name        : Grégoire Roussel
+    designation : Le petit dernier de l'équipe est un vrai touche-à-tout, du party game au deck building en passant par le placement et la coop. On murmure dans le recoin le plus sombre du bar qu'il serait également rôliste...
+    instagram   : https://www.instagram.com/aubeaujeu/?hl=fr+au+beau+jeu
+    facebook    : https://www.facebook.com/AuBeauJeu/
