--- a/data/team.yml
+++ b/data/team.yml
@@ -14,7 +14,7 @@ members  :
     facebook    : https://www.facebook.com/steeves.avisse
 
   - image       : images/team/team-member-three.jpg
-    name        : Grégoire Roussel
-    designation : Le petit dernier de l'équipe est un vrai touche-à-tout, du party game au deck building en passant par le placement et la coop. On murmure dans le recoin le plus sombre du bar qu'il serait également rôliste...
+    name        : Robin Couturier
+    designation : L'éternel deuxième place. Adepte de la trahison sournoise, mais pas assez stratège pour gagner, il finira systématiquement deuxième à tout type de jeu.
     instagram   : https://www.instagram.com/aubeaujeu/?hl=fr+au+beau+jeu
     facebook    : https://www.facebook.com/AuBeauJeu/
